# recodex

./: .ai-review.toml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
dashboard/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx  style.css
docs/: design-draft.md  implementation-plan.md  index.html  maintenance.md  recodex_core_analysis_and_artifact_architecture.md  recodex_core_implementation_status.md  recodex_efficiency_analysis_design_v2.md  recodex_efficiency_report_design.html  spec.md  v0.2.0-contextseek-inspired-refactor.md  v0.2.0-llm-analysis-workflow.md  v0.2.0-transcript-graph-lineage.md
scripts/: publish-pypi.sh
src/ai_dev_review/: __init__.py  analysis.py  cli.py  config.py  (+8 more)
tests/: test_analysis.py  test_cli.py  test_cli_extended.py  test_cli_full_features.py  test_codex_adapter.py  test_dashboard_server.py  test_efficiency_analysis.py  test_evals.py  test_evidence_auditor.py  test_evidence_mining.py  test_html_report.py  test_importers.py  test_init_catalog.py  test_llm.py  test_llm_workflow.py  test_privacy_config.py  test_provider_assets.py  test_qualitative_coding.py  test_quickstart.py  test_reports.py  test_rulebase.py  test_skill_export.py  test_storage.py  test_storage_manager.py  test_sync.py  test_transcript_graph.py  test_transcripts.py  test_watch.py
(+94 files in other folders)
